--- a/train-sensor/build.gradle
+++ b/train-sensor/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     compile project(':train-interfaces')
     compile project(':train-user')
+    compile group: 'org.mockito', name: 'mockito-core', version: '2.22.0'
 
     compile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.mockito:mockito-core:2.7.16'
